--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -68,25 +68,16 @@ body {
 }
 
 
-/* do this when screen is small (what you previously had) */
-@media only screen and(max-width: 1024px) {
-
-
-}
-
 /* do this when screen size is big (the yellow is on the side) */
 @media only screen and (min-width: 1025px){
-
-/* 
-  .orientation {
-  display: flex;
-  width: 100%;
-  align-items: stretch;
-  } */
 
   .container {
     width:60%;
     margin-right: 50px;
+  }
+
+  .orientation {
+    padding-top: 120px;
   }
 
 } 
